fix: landingpagemasthead text alignment

--- a/src/styles/application/_landingPageMastHead.scss
+++ b/src/styles/application/_landingPageMastHead.scss
@@ -6,8 +6,9 @@
   background-position: top;
   background-size: cover;
   color: $color-pf-white;
+  margin: auto 0;
   height: 200px;
   text-align: center;
-  display: grid;
-  margin: auto 0;
+  display: flex;
+  align-items: center;
 }
